[gd_scene load_steps=11 format=2]

[ext_resource path="res://assignments/Assignment4/LaserHolder.gd" type="Script" id=1]
[ext_resource path="res://assignments/Assignment4/LaserMaterial.tres" type="Material" id=2]
[ext_resource path="res://assignments/Assignment4/metal-texture.jpg" type="Texture" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 3 )
metallic = 0.78
metallic_texture = ExtResource( 3 )
roughness = 0.37
roughness_texture = ExtResource( 3 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 100, 1, 100 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 49.9991, 0.510055, 49.9756 )

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="Environment" id=5]
background_energy = 4.56
fog_enabled = true
fog_depth_curve = 0.297302
auto_exposure_scale = 0.01
ss_reflections_enabled = true
ss_reflections_roughness = false
glow_enabled = true

[sub_resource type="SphereMesh" id=6]

[sub_resource type="SphereShape" id=7]
radius = 1.02602

[node name="Spatial" type="Spatial"]

[node name="Floor" type="StaticBody" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 3 )

[node name="SpotLight" type="DirectionalLight" parent="."]
transform = Transform( 0.821876, 0.33071, -0.463844, 0, 0.814237, 0.580532, 0.569667, -0.477126, 0.669202, -7.96172, 6.96202, 7.31298 )
shadow_enabled = true

[node name="CSGSphere" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.99729, 3.85223, -14.1554 )
use_collision = true
material = SubResource( 4 )

[node name="CSGSphere2" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5836, 3.90215, -8.04969 )
use_collision = true

[node name="CSGSphere3" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.83174, 2.8889, -6.89559 )
use_collision = true

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 0.852932, -0.267392, -0.44834, 0, 0.858853, -0.512223, 0.522022, 0.436891, 0.732543, -5.86134, 3.79419, -2.41061 )
use_collision = true

[node name="LaserHolder" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CameraHolder" type="Spatial" parent="LaserHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.52937, 0.087572 )

[node name="Camera" type="Camera" parent="LaserHolder/CameraHolder"]
transform = Transform( 0.942379, -0.103908, 0.318001, 0, 0.950543, 0.310593, -0.334547, -0.292697, 0.895772, 2.78942, 2.19799, 7.39692 )
environment = SubResource( 5 )
current = true

[node name="Laser" type="ImmediateGeometry" parent="LaserHolder"]
transform = Transform( 1, 0, -1.49012e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0 )
material_override = ExtResource( 2 )
cast_shadow = 0

[node name="LaserEmitter" type="CSGCylinder" parent="LaserHolder"]
radius = 0.338925
cone = true

[node name="LaserGunpoint" type="Position3D" parent="LaserHolder/LaserEmitter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.94971, 2.34526, -3.4531 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 6 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 7 )
